<resources>
    <string name="app_name">뉴스</string>

    <!-- category -->
    <string name="top">TOP</string>
    <string name="business">비즈니스</string>
    <string name="entertainment">엔터테인먼트</string>
    <string name="sports">스포츠</string>
    <string name="health">건강</string>
    <string name="science">과학</string>
    <string name="technology">기술</string>

    <!-- navigator -->
    <string name="headline">헤드라인</string>
    <string name="video">비디오</string>
    <string name="discover">탐색</string>
    <string name="profile">프로필</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- search -->
    <string name="cancel">CANCEL</string>
    <string name="hint">검색어 입력</string>

    <!-- media -->
    <string name="trending">트렌드</string>
    <string name="kbs">KBS</string>
    <string name="sbs">SBS</string>
    <string name="mbc">MBC</string>
    <string name="ytn">YTN</string>
    <string name="jtbc">JTBC</string>
    <string name="yonhap">연합뉴스</string>
    <string name="tvchosun">TV조선</string>
</resources>
