<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/business" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/entertainment" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/health" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/science" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/round_library_books_24"
            android:title="@string/sports"/>
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/technology"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
