<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_menu_headline"
        android:icon="@drawable/round_dashboard_24"
        android:iconTint="@color/LightGrey"
        android:title="@string/headline"/>

    <item
        android:id="@+id/action_menu_video"
        android:icon="@drawable/round_ondemand_video_24"
        android:iconTint="@color/LightGrey"
        android:title="@string/video"/>

    <item
        android:id="@+id/action_menu_discover"
        android:icon="@drawable/round_discover_24"
        android:iconTint="@color/LightGrey"
        android:title="@string/discover"/>

    <item
        android:id="@+id/action_menu_profile"
        android:icon="@drawable/round_person_pin_24"
        android:iconTint="@color/LightGrey"
        android:title="@string/profile" />
</menu>