<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.fragment.video.VideoFragment">

    <data>
        <variable
            name="videoViewModel"
            type="com.kevin.newsapp.ui.main.video.VideoViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/videoParentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/videoFragmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/video"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/videoSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:src="@drawable/round_search_black_24"
            app:layout_constraintBottom_toBottomOf="@+id/videoFragmentTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/videoFragmentTitle" />

        <android.support.design.widget.TabLayout
            android:id="@+id/videoTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoSearchButton"
            app:tabIndicatorColor="@android:color/black"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@android:color/black"
            app:tabTextAppearance="@style/TabLayoutTextStyle"
            app:tabTextColor="@color/LightGrey">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jtbc" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ytn" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sbs" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kbs" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yonhap" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvchosun" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mbc" />
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/videoViewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoTabLayout">

        </android.support.v4.view.ViewPager>

        <android.support.constraint.Guideline
            android:id="@+id/videoStartGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1" />

        <android.support.constraint.Guideline
            android:id="@+id/videoEndGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1" />

        <android.support.constraint.Guideline
            android:id="@+id/videoHorizontalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1" />

        <LinearLayout
            android:id="@+id/videoSearchHeader"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@android:color/background_light"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/videoEndGuideline"
            app:layout_constraintStart_toStartOf="@+id/videoStartGuideline"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/videoSearchEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@color/VeryLightGrey"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/round_search_24"
                android:drawableTint="@color/DimGray"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/hint"
                android:inputType="text"
                android:paddingBottom="4dp"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:singleLine="true"
                android:text="@={videoViewModel.videoSearchQuery}"
                android:textColorHint="@color/DimGray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/videoSearchCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:text="@string/cancel"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/videoSearchRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/VeryLightGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/videoHorizontalGuideline"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
    </android.support.constraint.ConstraintLayout>
</layout>