<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapsing_layout_height"
            android:fitsSystemWindows="true"
            android:background="@color/colorPrimaryDark"
            app:contentScrim="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <android.support.v4.view.ViewPager
                android:id="@+id/headline_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier=".7">

            </android.support.v4.view.ViewPager>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_gravity="top"
                android:fitsSystemWindows="true"
                android:layout_marginBottom="@dimen/tab_layout_height"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_collapseMode="pin">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:tint="@android:color/white"
                        app:srcCompat="@drawable/round_library_books_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/search"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:tint="@android:color/white"
                        app:srcCompat="@drawable/round_search_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/rtl_menu"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/rtl_menu"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        android:tint="@android:color/white"
                        app:srcCompat="@drawable/round_menu_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:tabIndicatorColor="@color/White"
                app:tabSelectedTextColor="@color/White"
                app:tabMode="scrollable">

                <android.support.design.widget.TabItem
                    android:id="@+id/business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business" />

                <android.support.design.widget.TabItem
                    android:id="@+id/entertainment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entertainment" />

                <android.support.design.widget.TabItem
                    android:id="@+id/health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health" />

                <android.support.design.widget.TabItem
                    android:id="@+id/science"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/science" />

                <android.support.design.widget.TabItem
                    android:id="@+id/sports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sports" />

                <android.support.design.widget.TabItem
                    android:id="@+id/technology"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/technology" />
            </android.support.design.widget.TabLayout>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

</android.support.design.widget.CoordinatorLayout>